--- a/app/src/main/res/layout/item_image_layout.xml
+++ b/app/src/main/res/layout/item_image_layout.xml
@@ -1,75 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    android:layout_width="185dp"
-    android:backgroundTint="@color/black"
-    android:layout_height="wrap_content"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="185dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="4dp"
+    android:backgroundTint="@color/black"
+    android:padding="4dp"
     cardview:cardCornerRadius="5dp"
     cardview:cardElevation="10dp"
-    android:padding="4dp"
-    android:outlineAmbientShadowColor="@color/white"
-    android:outlineSpotShadowColor="@color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    cardview:strokeColor="@color/start"
+    cardview:strokeWidth="2dp">
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:padding="10dp"
             android:adjustViewBounds="true"
+            android:padding="10dp"
             cardview:srcCompat="@android:color/holo_red_light" />
 
         <TextView
+            android:id="@+id/workoutName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Name"
-            android:layout_margin="4dp"
-            android:id="@+id/workoutName"
+            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="4dp"
             android:padding="5dp"
-            android:textColor="@color/white"/>
+            android:text="Name"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:textSize="16sp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/white" />
+
         <TextView
             android:id="@+id/trainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="4dp"
             android:padding="5dp"
-            android:layout_margin="4dp"
-            android:textColor="@color/white"
             android:text="Trainer"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="13sp"
+            android:textColor="@color/white" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="2dp"
             android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/difficulty"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Advanced"
-            android:textFontWeight="600" />
+            <TextView
+                android:id="@+id/difficulty"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:fontFamily="sans-serif-condensed-light"
+                android:text="Advanced"
+                android:textColor="@color/white"
+                android:textFontWeight="500" />
 
-        <TextView
-            android:id="@+id/duration"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content"
-            android:text="45min"/>
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:gravity="center"
+                android:fontFamily="sans-serif-condensed-light"
+                android:text="45min"
+                android:textFontWeight="500"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
